[gd_scene load_steps=21 format=3 uid="uid://crny8huftptv3"]

[ext_resource type="Script" path="res://Options/Options.gd" id="1_3umt6"]
[ext_resource type="Texture2D" uid="uid://qnlvy24r7cit" path="res://Options/Images/gradient.png" id="1_wewip"]
[ext_resource type="Texture2D" uid="uid://b6ju1ikhh4pk" path="res://Options/Images/Rocks/Rock 1.png" id="2_nj4nu"]
[ext_resource type="Texture2D" uid="uid://c4otlogo1ven3" path="res://Options/Images/Rocks/Rock 3.png" id="4_hxcym"]
[ext_resource type="Texture2D" uid="uid://df5lmcamn8co4" path="res://Options/Images/Rocks/Rock 4.png" id="5_l86i0"]
[ext_resource type="Texture2D" uid="uid://cwk5ivrkgv5v8" path="res://Options/Images/Paper/Content.png" id="6_x1wsd"]
[ext_resource type="Texture2D" uid="uid://cx460by0s71py" path="res://Options/Images/Rocks/Rock 5.png" id="6_y0xff"]
[ext_resource type="Texture2D" uid="uid://bpcghcwm5tmaq" path="res://Options/Images/Paper/Control.png" id="7_0g8di"]
[ext_resource type="FontFile" uid="uid://b1vh4s3p57eq3" path="res://Universal/dogica.otf" id="7_sef24"]
[ext_resource type="Script" path="res://Options/Profanity_Filter.gd" id="9_wanej"]
[ext_resource type="Theme" uid="uid://b1kpr3cy8y82u" path="res://Universal/Options.tres" id="11_akmem"]
[ext_resource type="Texture2D" uid="uid://da4xrqusqiq5" path="res://Options/Images/Paper/Return.png" id="11_nqq2v"]
[ext_resource type="Script" path="res://Options/Return.gd" id="12_2t7sy"]
[ext_resource type="FontVariation" uid="uid://2horrx768lgf" path="res://Universal/Font_Mono_16.tres" id="12_g3uw0"]

[sub_resource type="Theme" id="Theme_ft0ng"]
default_font = ExtResource("7_sef24")
default_font_size = 80
Label/constants/line_spacing = 16

[sub_resource type="Theme" id="Theme_q1xvq"]
default_font = ExtResource("12_g3uw0")
default_font_size = 256

[sub_resource type="Animation" id="Animation_vpeor"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.10472]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.15, 0.15)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Cyan:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 450)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Magneta:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 450)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Yellow:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 450)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Black:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 450)]
}

[sub_resource type="Animation" id="Animation_s6b4h"]
resource_name = "Return_Button"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.10472, -0.0523599]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.15, 0.15), Vector2(0.175, 0.175)]
}

[sub_resource type="Animation" id="Animation_04ojp"]
resource_name = "Slide_Away"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Cyan:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 450), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Magneta:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 450), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Yellow:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 450), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Black:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.6, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 450), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_18sbl"]
_data = {
"RESET": SubResource("Animation_vpeor"),
"Return_Button": SubResource("Animation_s6b4h"),
"Slide_Away": SubResource("Animation_04ojp")
}

[node name="Options" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_3umt6")

[node name="Gradient" type="Sprite2D" parent="."]
position = Vector2(801, -58.5)
texture = ExtResource("1_wewip")

[node name="Rock1" type="Sprite2D" parent="."]
position = Vector2(275, -12.5)
rotation = 0.825541
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_nj4nu")

[node name="Rock2" type="Sprite2D" parent="."]
position = Vector2(826.5, 341)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_hxcym")

[node name="Rock3" type="Sprite2D" parent="."]
position = Vector2(643.5, 434)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_l86i0")

[node name="Rock4" type="Sprite2D" parent="."]
position = Vector2(724.5, 313.5)
scale = Vector2(0.6, 0.6)
texture = ExtResource("6_y0xff")

[node name="Profanity" type="Sprite2D" parent="."]
position = Vector2(150, 150)
rotation = 3.15905
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_x1wsd")

[node name="Label" type="Label" parent="Profanity"]
offset_left = 414.051
offset_top = 85.2869
offset_right = 1235.05
offset_bottom = 257.287
rotation = 3.14159
theme = SubResource("Theme_ft0ng")
text = "Profanity 
Filter"

[node name="Control" type="Sprite2D" parent="."]
position = Vector2(300, 150)
rotation = 3.12414
scale = Vector2(0.1, 0.1)
texture = ExtResource("7_0g8di")
script = ExtResource("9_wanej")

[node name="CheckBox" type="CheckBox" parent="Control"]
offset_left = 270.0
offset_top = 170.0
offset_right = 1178.0
offset_bottom = 778.0
rotation = 3.14159
scale = Vector2(0.6, 0.6)
focus_mode = 0
theme = ExtResource("11_akmem")
icon_alignment = 1

[node name="Return" type="Sprite2D" parent="."]
position = Vector2(636.5, 66.5)
rotation = -0.10472
scale = Vector2(0.15, 0.15)
texture = ExtResource("11_nqq2v")
script = ExtResource("12_2t7sy")

[node name="Label" type="Label" parent="Return"]
offset_left = -639.302
offset_top = -167.744
offset_right = 896.698
offset_bottom = 146.256
theme = SubResource("Theme_q1xvq")
text = "Return"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Return"]
libraries = {
"": SubResource("AnimationLibrary_18sbl")
}

[node name="Return_Button" type="Area2D" parent="."]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Return_Button"]
position = Vector2(636.5, 66.5)
rotation = -0.0523599
scale = Vector2(0.175, 0.175)
polygon = PackedVector2Array(-668, -185.6, -656, -178.6, -656, -175.7, -661, -170.7, -661, -169.3, -660.2, -168.5, -657.3, -168.5, -649.3, -162.5, -640.8, -162.5, -639.8, -160.5, -636.3, -160.5, -610.3, -168.5, -606.7, -168.5, -598.4, -166, -588.5, -171.5, -585.6, -171.5, -577.1, -168.1, -564, -174.7, -564, -172.4, -543, -171.4, -543, -169.6, -541.4, -168.5, -537.3, -168.5, -528, -172.5, -528, -170.4, -513, -169.4, -513, -167.6, -511.4, -166.5, -501.1, -166.5, -483, -167.6, -483, -165.5, -470.4, -156.5, -469.3, -156.5, -446.3, -163.5, -444.8, -163.5, -426.6, -159.5, -421.5, -159.5, -413, -163.7, -413, -160.9, -411.6, -160.3, -392, -162.3, -385.6, -166.5, -357, -166.5, -357, -164.9, -343.7, -160.5, -341.1, -160.5, -335, -162.1, -335, -159.6, -330.4, -156.5, -319.4, -156.5, -312, -157.9, -312, -155.7, -311, -155.3, -307.8, -158.5, -305.9, -158.5, -293, -157.6, -275.3, -163.5, -271.9, -163.5, -269.9, -160.5, -266.4, -160.5, -258.4, -163.5, -255.9, -163.5, -243.7, -162.6, -235.7, -169.5, -231.6, -169.5, -224.1, -166.2, -217.5, -169.5, -214, -169.5, -192, -170.5, -192, -169.3, -175, -167.3, -175, -165.8, -167.7, -162.5, -164.8, -162.5, -162.5, -164.9, -160, -163.8, -160, -162.8, -140.7, -154.5, -138.3, -154.5, -120.3, -160.5, -118, -160.5, -98.8, -161.4, -95, -166.5, -72, -166.5, -72, -164.6, -66.5, -161.5, -60.5, -161.5, -54, -164.7, -54, -162.2, -41.6, -159.5, -38.6, -159.5, -32.6, -163.5, -29.9, -163.5, -27.9, -160.5, -20.1, -160.5, 19, -162.6, 19, -160, 22.1, -153.7, 34.6, -158.5, 52.1, -158.5, 61, -157.7, 70, -161.5, 70, -157.5, 70.5, -155.5, 72.4, -155.5, 80.4, -152.5, 81.8, -152.5, 113, -155.7, 113, -153.3, 117.8, -148.5, 141.8, -152.5, 144.1, -152.5, 161, -150.7, 171.8, -153.5, 173.4, -153.5, 181.7, -150.2, 199, -155.2, 199, -153, 213, -149.1, 259, -155.8, 259, -153.6, 266.5, -149.5, 275.4, -149.5, 283.4, -146.5, 336, -146.5, 336, -144.5, 338.6, -142.6, 341.6, -151.5, 344.8, -151.5, 349, -147.3, 349, -144.5, 350.8, -144.5, 352.8, -142.5, 354.5, -142.5, 360.5, -145.5, 366.1, -145.5, 381.1, -144.6, 387.3, -149.5, 389, -149.5, 429, -151.5, 430.8, -151.5, 433.8, -148.5, 436.9, -148.5, 476, -150.6, 476, -148.9, 484.6, -146.1, 497.6, -151.5, 503.2, -151.5, 511.3, -149.9, 523.6, -155.5, 525.4, -155.5, 532.3, -152.5, 545, -152.5, 559.6, -158.5, 578, -158.5, 578, -159.1, 593, -162.2, 593, -163.4, 600.3, -169.5, 602.7, -169.5, 609.9, -170.5, 611.8, -170.5, 617.8, -164.5, 620.1, -164.5, 631, -163.3, 631, -161.7, 642.4, -156.5, 645.1, -156.5, 669, -153.8, 669, -154.4, 705, -156.6, 705, -154.9, 706.7, -154.2, 725.6, -161.5, 727.4, -161.5, 735.3, -158.3, 763, -161.3, 770.3, -167.5, 780, -167.5, 784.9, -170.8, 787, -169.7, 798, -169.5, 798, -168, 827, -160, 827, -158.8, 850.5, -147.5, 853.2, -147.5, 855.5, -149.9, 858, -148.8, 858, -148.2, 878, -144.1, 878, -142.6, 896, -132.7, 896, -131.4, 900, -128.1, 900, -116.5, 892.5, -112.5, 885, -112.5, 879, -110.1, 879, -108.7, 874.8, -104.5, 868.3, -104.5, 851, -97.2, 851, -96.6, 842.7, -89.5, 837.8, -89.5, 833, -83.8, 833, -79.2, 831.4, -74.5, 829.8, -74.5, 826, -70.7, 826, -64.5, 823.7, -64.5, 817, -59.5, 817, -55.1, 814.6, -49.7, 817.3, -45.6, 816.2, -43.5, 814.7, -43.5, 807, -37.5, 807, -35.2, 805.4, -30.5, 802.1, -30.5, 784.3, -25.5, 778.8, -25.5, 774.7, -26.2, 761, -19.3, 761, -15.5, 755.7, -11.5, 747.3, -11.5, 737, -8.10001, 737, -0.800003, 729, 9.2, 729, 10.5, 730.3, 19.5, 727.8, 19.5, 741, 29.5, 741, 30.8, 747.9, 38.5, 750.5, 38.5, 764, 46.4, 764, 50.5, 764.9, 50.5, 781, 68.7, 781, 77.5, 778.8, 77.5, 772.8, 83.5, 768.5, 83.5, 761, 87.6, 761, 88.3, 756, 93.3, 756, 94.1, 757.4, 101.5, 754.7, 101.5, 744, 108.6, 744, 110, 750.4, 121.5, 747.1, 121.5, 743.1, 127.5, 740.5, 127.5, 737, 128.9, 737, 131, 733.2, 138.5, 729.9, 138.5, 716.9, 152.5, 714.1, 152.5, 712, 153, 712, 155.1, 707.1, 162.5, 702.4, 162.5, 688, 165.2, 678.8, 173.5, 670, 173.5, 282, 180.5, 259.4, 180.5, 252.8, 176.4, 247.7, 180.5, 178, 180.5, 178, 178.6, 152.3, 161.5, 150.6, 161.5, 147.1, 163.8, 145, 162.7, 145, 161.8, 133, 156.8, 133, 155.6, 124, 149.6, 124, 147, 120.9, 141.5, 118.5, 141.5, 92.5, 128.5, 87.8, 128.5, 84.6, 127.9, 72, 135.6, 72, 138.2, 64.9, 146.5, 62.3, 146.5, 57.2, 148.7, 61, 151.5, 61, 154.8, 59.4, 159.5, 58.1, 159.5, 44.1, 180.5, 40.1, 180.5, 28.2, 183.5, 25, 183.5, -22, 181.6, -22, 182.5, -310, 186.5, -749.6, 186.5, -776, 183.3, -776, 181.9, -831, 161.9, -831, 160.8, -874, 141.8, -874, 140.2, -880, 132.2, -880, 128.2, -877.6, 120.1, -879.4, 115.5, -882.8, 115.5, -896, 102.3, -896, 99, -900, 91, -900, 31.5, -899.3, 31.5, -895, 30.8, -884.8, 20.5, -882.3, 20.5, -881, 20.1, -881, 18.4, -879.8, 7.5, -877.8, 7.5, -874, 3.7, -874, -14.5, -874.6, -14.5, -877.6, -26.5, -875.1, -26.5, -872.9, -29.8, -881.3, -43.5, -880.2, -45.5, -878.8, -53.5, -876.9, -53.5, -865, -64.4, -865, -68.4, -871, -72.4, -871, -78.7, -882, -89.7, -882, -95.5, -884.8, -116.5, -885.5, -116.5, -890, -131.2, -890, -137.1, -885, -145.1, -885, -154.8, -878.5, -176.5, -876.7, -176.5, -867.8, -184.5, -861.9, -184.5, -859.9, -181.5, -853.9, -181.5, -843, -180.7, -818, -184.8, -818, -183.2, -806, -181.2, -806, -179.3, -805.2, -178.5, -804.3, -178.5, -799, -180.3, -799, -177.5, -796.3, -175.5, -794.5, -175.5, -788, -178.7, -788, -175.7, -785.1, -174.3, -776, -177.9, -771.2, -186.5, -767, -186.5, -758.7, -186.5, -755.7, -185.5, -750.5, -185.5, -748, -186.5, -743, -186.5, -743, -185.2, -737.1, -178.5, -736.5, -178.5, -722.9, -186.5, -668, -186.5)

[node name="Cyan" type="ColorRect" parent="."]
offset_top = 450.0
offset_right = 1600.0
offset_bottom = 1350.0
color = Color(0, 0.576471, 0.827451, 1)

[node name="Magneta" type="ColorRect" parent="."]
offset_top = 450.0
offset_right = 1600.0
offset_bottom = 1350.0
color = Color(0.8, 0.00392157, 0.419608, 1)

[node name="Yellow" type="ColorRect" parent="."]
offset_top = 450.0
offset_right = 1600.0
offset_bottom = 1350.0
color = Color(1, 0.945098, 0.0509804, 1)

[node name="Black" type="ColorRect" parent="."]
offset_top = 450.0
offset_right = 1600.0
offset_bottom = 1350.0
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="Control/CheckBox" to="Control" method="_on_check_box_pressed"]
[connection signal="mouse_entered" from="Return_Button" to="Return" method="_on_return_button_mouse_entered"]
[connection signal="mouse_exited" from="Return_Button" to="Return" method="_on_return_button_mouse_exited"]
